# OLangCompiler

./: .gitignore  CMakeLists.txt  FEATURES.md  README.md  lexical-analyzer-test  lexical-analyzer-test.py  olang  questions.md  std.ll
.cache/clangd/index/: lexical-analyzer-starter.cpp.C3DC4C698FF74F47.idx  lexical-analyzer.h.91D26604481B4259.idx  main.cpp.54F3F5737C64F6CD.idx  token-code.h.07644FE85B142694.idx  token-generator.h.3823B7B52EF64765.idx  token.h.9B3104E27BD30CBE.idx
grammar/: grammar
src/: lexical-analyzer-starter.cpp  main.cpp
src/codegen/: ir_visitor.h
src/lexical-analyzer/: details.h  lexical-analyzer.h  token-code.h  token-generator.h  token-generator.hpp  token.cpp  token.h  tree.h
src/logging/: error_handler.h  logger.h
src/semantic-analyzer/: scope-checking.h  scope.h  visitor.h
src/syntactical analyzer/: details.h  tree.h
src/syntactical-analyzer/: details.cpp  details.h  token_stream.h  tree.h
src/visitor/: visitor.h
std/: std.c  std.ll  std.olg
tests/: 10_test.olg  11_test.olg  12_test.olg  13_test.olg  14_test.olg  15_test.olg  16_test.olg  1_test.olg  2_test.olg  3_test.olg  4_test.olg  5_test.olg  6_test.olg  7_test.olg  8_test.olg  9_test.olg
tests/parsing_result/lexical/: lexical_3_test.txt
tests/test_ll/: out.ll
